# omnicad-2

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  design.md  pyproject.toml  spec.md
.claude/: settings.local.json
config/: branding.json  branding.schema.json  i18n.json  i18n.schema.json  pipeline.schema.json  task_io.schema.json
config/i18n/: en.json  zh_CN.json
examples/cad_pipeline/: README.md  pipeline.yaml  schemas.py  tasks.py
pipeline_engine/: __init__.py  __main__.py  branding.py  cli.py  cli_json.py  i18n.py  repl.py  repl_completion.py  service.py  view_model.py
pipeline_engine/api/: __init__.py  app.py  errors.py  schemas.py
pipeline_engine/builtin/: manual_data_loader.py
pipeline_engine/core/: base_task.py  dag_validator.py  errors.py  plugin_loader.py  run_context.py  run_logger.py  run_manager.py  scheduler.py  state_manager.py  storage.py  yaml_parser.py
pipeline_engine/models/: pipeline_spec.py  runtime_state.py
pipelines/cad_drawing_pipeline/: README.md  pipeline.yaml  schemas.py  tasks.py
pipelines/cad_identify_pipeline/: README.md  pipeline.yaml
tests/: conftest.py
tests/api/: conftest.py  test_api.py  test_errors.py  test_streaming.py
tests/e2e/: test_cad_drawing_pipeline.py  test_cad_example.py  test_cad_failure_recovery.py  test_run_logging.py
tests/integration/: test_abort_resume.py  test_cross_process_resume.py  test_fix_command.py  test_multi_pipeline.py  test_output_channels.py  test_repl_autoload.py  test_repl_commands.py  test_repl_completion.py  test_repl_log_command.py  test_repl_rendering.py  test_scheduler.py  test_shared_output_concurrent.py  test_skip_mode.py  (+2 more)
(+30 files in other folders)
