[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-engine"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "networkx>=3.0",
    "PyYAML>=6.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "typer>=0.12",
]

[project.scripts]
pipeline_cli = "pipeline_engine.cli:app"

[project.optional-dependencies]
api = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30",
    "sse-starlette>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline_engine*", "pipelines*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["pipeline_engine"]
omit = ["tests/*"]
